--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^16.0.0",
     "react-bootstrap": "^0.31.3",
     "react-chartjs-2": "^2.6.2",
-    "react-dom": "^16.0.0"
+    "react-dom": "^16.0.0",
+    "react-input-range": "^1.2.1"
   },
   "devDependencies": {
     "react-scripts": "1.0.14",
