--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "react-bootstrap": "^0.31.3",
     "react-chartjs-2": "^2.6.2",
     "react-dom": "^16.0.0",
-    "react-input-range": "^1.2.1"
+    "react-input-range": "^1.2.1",
+    "serve": "^6.3.1"
   },
   "devDependencies": {
     "react-scripts": "1.0.14",
     "standart": "*"
   },
+  "bin": "api/server.js",
   "scripts": {
     "start-dev": "nf start -p 3000",
     "start": "react-scripts start",
