--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
   },
   "bin": "api/server.js",
   "scripts": {
+    "startApi": "node api/server.js",
     "start-dev": "nf start -p 3000",
-    "start": "react-scripts start",
+    "startGui": "react-scripts start",
     "build": "react-scripts build",
     "test": "standart src/*.js api/*.js && react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
