--- a/package.json
+++ b/package.json
@@ -3,20 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.16.2",
     "body-parser": "^1.18.2",
     "chart.js": "^2.7.0",
     "dotenv": "^4.0.0",
     "express": "^4.16.1",
     "foreman": "^2.0.0",
-    "jquery": "^3.2.1",
     "marked": "^0.3.6",
     "material-ui": "^1.0.0-beta.16",
     "md5": "^2.2.1",
     "mongoose": "^4.12.0",
-    "nodemon": "^1.12.1",
     "react": "^16.0.0",
-    "react-bootstrap": "^0.31.3",
     "react-chartjs-2": "^2.6.2",
     "react-dom": "^16.0.0",
     "react-input-range": "^1.2.1",
@@ -24,7 +20,8 @@
   },
   "devDependencies": {
     "react-scripts": "1.0.14",
-    "standart": "*"
+    "standart": "*",
+    "nodemon": "^1.12.1"
   },
   "bin": "api/server.js",
   "scripts": {
