--- a/package.json
+++ b/package.json
@@ -19,22 +19,23 @@
     "serve": "^6.3.1"
   },
   "devDependencies": {
-    "react-scripts": "1.0.14",
-    "standart": "*",
-    "nodemon": "^1.12.1"
+    "jest": "^21.2.1",
+    "nodemon": "^1.12.1",
+    "react-scripts": "1.0.14"
   },
   "bin": "api/server.js",
   "scripts": {
-    "startApi": "node api/server.js",
     "start-dev": "nf start -p 3000",
     "startGui": "react-scripts start",
     "build": "react-scripts build",
-    "test": "standart src/*.js api/*.js && react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "test": "jest --watchAll",
+    "eject": "react-scripts eject",
+    "startApi": "nodemon api/server.js"
   },
   "nodemonConfig": {
     "ignore": [
-      "test/*",
+      "api/__tests__/*",
+      "api/__tests__/*.js",
       "docs/*",
       "*.json",
       "node_modules/*",
