--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,11 +2,10 @@ version: 2
 jobs:
   build:
     docker:
-      # specify the version you desire here
+      # primary image
       - image: circleci/node:8.6.0
-      
+      #db for the system
       - image: circleci/mongo:3.4.4
-
     working_directory: ~/repo
 
     steps:
