--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "start-dev": "URL_DB=mongodb://localhost:27017 nf start -p 3000",
     "startGui": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest --watchAll",
-    "simpleTest": "jest",
+    "test": "jest",
+    "test-dev": "API_URL=http://localhost:3001/api jest",
     "eject": "react-scripts eject",
     "startApi": "URL_DB=mongodb://mongodb:27017 node api/server.js"
   },
